--- a/Qt/src/tandaView.ui
+++ b/Qt/src/tandaView.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>258</width>
-    <height>389</height>
+    <width>309</width>
+    <height>492</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>309</width>
+    <height>492</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>309</width>
+    <height>492</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Crear Tanda</string>
@@ -17,7 +29,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
+     <y>200</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -44,7 +56,7 @@
     <rect>
      <x>90</x>
      <y>10</y>
-     <width>151</width>
+     <width>201</width>
      <height>27</height>
     </rect>
    </property>
@@ -80,7 +92,7 @@
     <rect>
      <x>90</x>
      <y>110</y>
-     <width>113</width>
+     <width>201</width>
      <height>29</height>
     </rect>
    </property>
@@ -90,29 +102,16 @@
     <rect>
      <x>90</x>
      <y>60</y>
-     <width>151</width>
+     <width>201</width>
      <height>41</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QListWidget" name="listWidgetIntegrantes">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>180</y>
-     <width>231</width>
-     <height>151</height>
-    </rect>
-   </property>
-   <property name="selectionMode">
-    <enum>QAbstractItemView::MultiSelection</enum>
    </property>
   </widget>
   <widget class="QPushButton" name="pushCrear">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>350</y>
+     <x>40</x>
+     <y>440</y>
      <width>88</width>
      <height>27</height>
     </rect>
@@ -121,17 +120,63 @@
     <string>Crear</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="pushCancel">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>350</y>
+     <x>180</x>
+     <y>440</y>
      <width>88</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
     <string>Cancelar</string>
+   </property>
+  </widget>
+  <widget class="QScrollArea" name="scrollArea">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>220</y>
+     <width>291</width>
+     <height>211</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>287</width>
+      <height>207</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QSpinBox" name="spinBoxIntegrantes">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>150</y>
+     <width>201</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>160</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Integrantes</string>
    </property>
   </widget>
  </widget>
