--- a/Qt/src/salidasView.ui
+++ b/Qt/src/salidasView.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButtonGuardar">
    <property name="geometry">
     <rect>
      <x>60</x>
