--- a/Qt/src/pagosView.ui
+++ b/Qt/src/pagosView.ui
@@ -66,16 +66,6 @@
      <string>Cancelar</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineFecha">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>50</y>
-      <width>171</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QComboBox" name="comboBoxTandas">
     <property name="geometry">
      <rect>
@@ -107,6 +97,9 @@
     <attribute name="horizontalHeaderHighlightSections">
      <bool>true</bool>
     </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>65</number>
+    </attribute>
     <attribute name="verticalHeaderCascadingSectionResizes">
      <bool>false</bool>
     </attribute>
@@ -130,6 +123,16 @@
       <string>Pagar</string>
      </property>
     </column>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>40</y>
+      <width>171</width>
+      <height>22</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
