--- a/Qt/src/pagosView.ui
+++ b/Qt/src/pagosView.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>558</width>
-    <height>544</height>
+    <width>474</width>
+    <height>491</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>474</width>
+    <height>491</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>474</width>
+    <height>491</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Pagos</string>
@@ -17,7 +29,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>120</x>
       <y>10</y>
       <width>46</width>
       <height>13</height>
@@ -27,24 +39,11 @@
      <string>Tanda</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>40</y>
-      <width>46</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Fecha</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButtonAceptar">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>430</y>
+      <x>130</x>
+      <y>420</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -56,8 +55,8 @@
    <widget class="QPushButton" name="pushButtonCancel">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>430</y>
+      <x>280</x>
+      <y>420</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -69,7 +68,7 @@
    <widget class="QComboBox" name="comboBoxTandas">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>170</x>
       <y>10</y>
       <width>171</width>
       <height>22</height>
@@ -79,9 +78,9 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>210</y>
-      <width>521</width>
+      <width>451</width>
       <height>192</height>
      </rect>
     </property>
@@ -127,23 +126,13 @@
    <widget class="QCalendarWidget" name="calendarWidget">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>110</x>
       <y>40</y>
       <width>256</width>
       <height>155</height>
      </rect>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>558</width>
-     <height>21</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
