--- a/Qt/src/tandaView.ui
+++ b/Qt/src/tandaView.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>309</width>
-    <height>492</height>
+    <width>645</width>
+    <height>414</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>309</width>
-    <height>492</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>309</width>
-    <height>492</height>
+    <width>1000</width>
+    <height>1000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>200</y>
+     <x>330</x>
+     <y>0</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -38,34 +38,11 @@
     <string>Integrantes</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Fecha Inicio</string>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="dateEdit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>10</y>
-     <width>201</width>
-     <height>27</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>60</y>
+     <x>20</x>
+     <y>210</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -77,8 +54,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
+     <x>20</x>
+     <y>260</y>
      <width>59</width>
      <height>15</height>
     </rect>
@@ -90,28 +67,18 @@
   <widget class="QLineEdit" name="montoEdit">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>110</y>
+     <x>100</x>
+     <y>250</y>
      <width>201</width>
      <height>29</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QListWidget" name="listWidgetPeriodo">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>60</y>
-     <width>201</width>
-     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushCrear">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>440</y>
+     <x>220</x>
+     <y>360</y>
      <width>88</width>
      <height>27</height>
     </rect>
@@ -123,8 +90,8 @@
   <widget class="QPushButton" name="pushCancel">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>440</y>
+     <x>360</x>
+     <y>360</y>
      <width>88</width>
      <height>27</height>
     </rect>
@@ -136,10 +103,10 @@
   <widget class="QScrollArea" name="scrollArea">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>220</y>
+     <x>330</x>
+     <y>20</y>
      <width>291</width>
-     <height>211</height>
+     <height>311</height>
     </rect>
    </property>
    <property name="widgetResizable">
@@ -151,7 +118,7 @@
       <x>0</x>
       <y>0</y>
       <width>287</width>
-      <height>207</height>
+      <height>307</height>
      </rect>
     </property>
    </widget>
@@ -159,8 +126,8 @@
   <widget class="QSpinBox" name="spinBoxIntegrantes">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>150</y>
+     <x>100</x>
+     <y>290</y>
      <width>201</width>
      <height>27</height>
     </rect>
@@ -169,14 +136,34 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>160</y>
+     <x>20</x>
+     <y>300</y>
      <width>81</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Integrantes</string>
+   </property>
+  </widget>
+  <widget class="QCalendarWidget" name="calendarWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>288</width>
+     <height>166</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxPeriodo">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>210</y>
+     <width>191</width>
+     <height>27</height>
+    </rect>
    </property>
   </widget>
  </widget>
