--- a/Qt/src/cerrarView.ui
+++ b/Qt/src/cerrarView.ui
@@ -10,6 +10,18 @@
     <height>132</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>240</width>
+    <height>132</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>240</width>
+    <height>132</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Terminar Tanda</string>
   </property>
