Se corrige problema de pantalla pagos, no actualizaba registros

--- a/Qt/forms/cerrarView.ui
+++ b/Qt/forms/cerrarView.ui
@@ -45,7 +45,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cerrar</string>
+    <string>Terminar</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonCancelar">
